k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: sk036-backend
    namespace: skala-practice
spec:
    replicas: 1
    selector:
        # 리소스 선택, 특정 조건에 맞는 리소스 선택 위해 지정
        matchLabels:
            app: sk036-backend
    template:
        metadata:
            annotations:
                prometheus.io/scrape: 'true'
                prometheus.io/port: '8081'
                prometheus.io/path: '/actuator/prometheus'
            labels:
                app: sk036-backend
        spec:
            serviceAccountName: default
            containers:
                - name: webserver
            image: amdp-registry.skala-ai.com/skala25a/sk036-stock-be:2.0.0-22-5f2103f7e96c
                  imagePullPolicy: Always
