k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: sk036-backend
    namespace: skala-practice
spec:
    selector:
        app: sk036-backend
    ports:
        - name: http
          protocol: TCP
          port: 8080
          targetPort: 8080
        - name: mgmt
          protocol: TCP
          port: 8081
          targetPort: 8081
    type: ClusterIP
