k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: sk036-ingress
    namespace: skala-practice
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
    ingressClassName: public-nginx
    rules:
        - host: sk036.skala25a.project.skala-ai.com
          http:
              paths:
                  - path: /api
                    pathType: Prefix
                    backend:
                        service:
                            name: sk036-backend
                            port:
                                number: 8080
                  - path: /swagger
                    pathType: Prefix
                    backend:
                        service:
                            name: sk036-backend
                            port:
                                number: 8080
                  - path: /actuator
                    pathType: Prefix
                    backend:
                        service:
                            name: sk036-backend
                            port:
                                number: 8081
                #   - path: /
                #     pathType: Prefix
                #     backend:
                #         service:
                #             name: sk036-frontend
                #             port:
                #                 number: 80
    tls:
        - hosts:
              - sk036.skala25a.project.skala-ai.com
          secretName: sk036-ingress-secret
